# QueAI

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  command.md  docker-compose.yml  entrypoint.sh  install.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  plugin_proposal.yml
.github/workflows/: ci.yml  docker.yml  sync-installer.yml
app_store/: models.py  urls.py  views.py
app_store/templates/: apps.html  marketplace.html  stats_dashboard.html
cli/: README.md  pyproject.toml
cli/queai_cli/: client.py  config.py  main.py
core/: audit.py  backup.py  context_processors.py  healthcheck.py  models.py  settings.py  tests.py  urls.py  views.py
core/api/: auth.py  openapi.py  serializers.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/: account.html  api_docs.html  audit.html  base.html  home.html  login.html  welcome.html
docs/: API_REFERENCE.md  ARCHITECTURE.md  DESIGN_TOKENS.md  OPERATIONS.md  PLUGIN_DEVELOPMENT.md  PRODUCTVISION.md  README.md  ROADMAP.md  SECURITY.md
kernel/: Dockerfile  requirements.txt
kernel/app_store/: urls.py  views.py
kernel/core/: urls.py
marketplace/: urls.py  views.py
marketplace/templates/: marketplace.html
module_manager/: models.py  tests.py  urls.py  views.py
module_manager/migrations/: 0001_initial.py  (+1 more)
scripts/: build_locale.py
system_monitor/: apps.py  urls.py  views.py
(+29 files in other folders)
