[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "queai"
version = "0.1.0"
description = "CLI para el kernel QueAI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "QueAI Project" }]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "tomli>=2.0; python_version<'3.11'",
    "tomli-w>=1.0",
]

[project.scripts]
queai = "queai_cli.main:cli"

[tool.setuptools.packages.find]
include = ["queai_cli*"]
